2006-04-04 Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Reference nunit libraries using $(NUNIT_LIBS).

2006-04-03 Lluis Sanchez Gual  <lluis@novell.com>

	* templates/GtkSharp2Project.xpt.xml: Fix window
	  constructor.

2006-03-30 Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.addin.xml: Updated references.

2006-03-24  Jacob Ilsø Christensen <jacobilsoe@gmail.com>

	* templates/ConsoleProject.xpt.xml: Added namespace clause.

2006-03-24 Lluis Sanchez Gual  <lluis@novell.com>   

	* CSharpBinding.mdp: Updated.
	* Makefile.am: Use an unified format. Patch by Matze Braun.
	* CSharpBinding.addin.xml: Updated add-in versions.

2006-03-24  Jacob Ilsø Christensen <jacobilsoe@gmail.com>

	* Test:
	* Test/Test.cs:
	* Makefile.am:
	Added an initial test which validates that the resolver
	can resolve namespaces.

2006-03-17  Jacob Ilsø Christensen <jacobilsoe@gmail.com>

	* Parser/Parser.cs:
	* Parser/Resolver.cs:
	Removed unused MonodocResolver.

2006-03-16  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* Parser/LanguageItemVisitor.cs: Make sure that composite
	namespaces are parsed correctly.

2006-03-12  David Makovský (Yakeen) <yakeen@sannyas-on.net>

        * CSharp.glade: Marking some strings not to be translated. Not include balast in pot file.
	
2006-03-08 Lluis Sanchez Gual  <lluis@novell.com>   

	* Parser/CodeGenerator.cs: Fixed issues when finding class
	  references. Add text line to found references.
	* Parser/LanguageItemVisitor.cs: Properly resolve primitive
	  type aliases.

2006-03-07 Lluis Sanchez Gual  <lluis@novell.com>   

	* Makefile.am:
	* CSharpBinding.addin.xml: Moved some templates to MD.Ide.

2006-03-06 Lluis Sanchez Gual  <lluis@novell.com>   

	* Parser/CSharpVisitor.cs: Added null check.

2006-03-02 Lluis Sanchez Gual  <lluis@novell.com>   

	* templates/GtkSharp2Project.xpt.xml: Use the new template syntax.

2006-02-24 Lluis Sanchez Gual  <lluis@novell.com>   
