@@ -1,3 +1,7 @@
+2006-04-07  David Makovský (Yakeen) <yakeen@sannyas-on.net>
+
+	* CSharpBinding.addin.xml: renamed attributes in FileFilter Extension
+
 2006-04-04 Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Makefile.am: Reference nunit libraries using $(NUNIT_LIBS).
